# pofmt

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  code_quality.yml  release.yml
news/: 1.feature.md  2.feature.md  3.feature.md
src/pofmt/: __init__.py  __main__.py  core.py
tests/: __init__.py  test_cli.py  test_formatter.py
tests/fixtures/: golden.po  golden_3x_width.po  golden_no_msgid.po  raw.po
