[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pofmt"
description = "Your missing PO formatter and linter"
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]

[project.urls]
Repository = "https://github.com/frostming/pofmt"
Homepage = "https://github.com/frostming/pofmt"

[project.scripts]
pofmt = "pofmt.__main__:main"

[project.optional-dependencies]
zh = [
    "pangu>=4.0",
]

[tool.pdm.build]
package-dir = "src"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
]

[tool.pdm.scripts]
test = "pytest tests/"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310"]

[tool.ruff]
line-length = 100
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
extend-ignore = ["B018", "B019"]
src = ["src"]
exclude = ["tests/fixtures"]
target-version = "py37"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["pofmt"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning"
]
